syntax = "proto3";

option go_package = "github.com/comnics/did-example/protos";

package registrar;

service Registrar {
  rpc RegisterDid (RegistrarRequest) returns (RegistrarResponse) {}
}

message RegistrarRequest {
  string did = 1;
  string didDocument = 2;
}

message RegistrarResponse {
  string result = 1;
}