syntax = "proto3";

option go_package = "github.com/comnics/did-example/protos";

package resolver;

service Resolver {
  rpc ResolveDid (ResolverRequest) returns (ResolverResponse) {}
}

message ResolverRequest {
  string did = 1;
}

message ResolverResponse {
  string didDocument = 1;
}